corrected margin spacing

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,6 +2,6 @@
   font-size: 24px;
   font-weight: 600;
   line-height: 33px;
-  margin-top: 10px;
+  margin: 19px;
   text-align: center;
 }
